tests/NormalTests/paczka1/fuzzy1/43924547.err
Error in line 8: PNXhwul5 A596 -1,1
Error in line 3: PNXhwul5 A596 93,4
Error in line 11: PNXhwul5 S721 20,9
Error in line 24: zJT1pH2 S721 83,9
Error in line 18: jcwvFtUDEQH S99 45,9
Error in line 33: PNXhwul5 A596 22,9
